--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ h1, h2, h3 {
 .about-img{
     display: inline-block;
     vertical-align: top;
-    max-width: 400px;
+    max-width: 390px;
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 .about-text{
@@ -224,8 +224,8 @@ h1, h2, h3 {
 .about-text-box{
     margin-bottom: 30px;
 }
-.about-button-box{
-    padding: 55px 0 0 0;
+.about-button{
+    margin: 55px 0 0 0;
 }
 
 
@@ -326,7 +326,15 @@ h1, h2, h3 {
     text-align: center;
     padding: 0 25px;
 }
-
+.hidden{
+    display: none !important; 
+}
+.view-more-btn{
+    margin: 50px auto;
+}
+.view-less-btn{
+    margin: 50px auto;
+}
 
 
 
