--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ h1, h2, h3 {
     font-size: 4.5rem;
     line-height: 4.5rem;
 }
-.welcome-img{
+/* .welcome-img{
     vertical-align: top;
     display: inline-block;
     position: absolute;
@@ -150,8 +150,48 @@ h1, h2, h3 {
     top: 80px;
     width: 520px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+} */
+
+.welcome-img-box{
+    vertical-align: top;
+    display: inline-block;
+    position: absolute;
+    right: 2.5%; 
+    top: 90px;
+    width: 540px;
+    text-align: right;
 }
 
+.welcome-img3{
+    /* vertical-align: top;
+    display: inline-block;
+    position: relative;
+    right: 2.5%; 
+    top: 80px; */
+    width: 170px;
+    /* margin: 0; */
+}
+.welcome-img2{
+    /* vertical-align: top;
+    display: inline-block;
+    position: relative;
+    right: 16%; 
+    top: 80px; */
+    width: 170px;
+    /* margin: 0; */
+    margin-right: 10px;
+}
+
+.welcome-img1{
+    /* vertical-align: top;
+    display: inline-block;
+    position: relative;
+    right: 29%; 
+    top: 80px; */
+    width: 170px;
+    /* margin: 0; */
+    margin-right: 10px;
+}
 
 
 
