--- a/css/reactive.css
+++ b/css/reactive.css
@@ -397,159 +397,95 @@
     }
 } 
 
+/* Products Page */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Home Page */
-
-@media screen and (max-height:790px),
-        screen and (max-height:750px){
-
-    
-}
-
-
-@media screen and (max-height:750px),
-        screen and (max-height:700px){
-
-    
-}
-@media screen and (max-height:700px),
-        screen and (max-height:650px){
-
-   
-
-}
-
-/* 1000px Width; The same for any Height*/
-
-@media (max-width: 1000px){
-  
-} 
-@media (max-width: 720px){
-    
-} 
-@media (max-width: 520px){ 
-   
-} 
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 1375px){
-
-    .welcome-img{
-        right: 2.5%; 
-        top: 80px;
-        width: 450px;
-    }
-    .welcome-box {
-        padding-bottom: 3%;
-    }
-    .features{
-        padding: 20px 10% 0; 
-    }
-
-}
-
-@media (max-width: 1300px){
-
-    .welcome-img{
-        right: 2.5%; 
-        top: 80px;
-        width: 380px;
-    }
-    .welcome-box {
-        padding-bottom: 2%;
-    }
-
-}
-
-@media (max-width:1250px){
-    .features{
-        padding: 20px 10% 0; 
-    }
-}
-
-@media (max-width: 1225px){
-    .logo{
-        left: 130px;
-    }
-    .welcome-img{
-        display: none;
-    }
-    .land-section{
-        padding-left: 12%;
-    }
-} 
-
-@media (max-width:1050px){
-    .logo{
-        left: 50px;
-        width: 300px;
-    }
-
-}
-
-@media (max-width:1000px){
-    .logo{
-        display: none;
-    }
-
-}
-
-@media (max-width:991px){
-    .features{
-        padding: 20px 10% 0; 
-    }
-}
 @media (max-width:969px){
     .product-head{
         width: 100%;
         margin-bottom: 35px;
     }
 }
+@media (max-width:640px){
+    .products-content {
+        text-align: center;
+        padding: 0 5% 0;
+    }
+    .product-description{
+        margin-left: 0;
+    }
+}
 
 
+/* Home Page */
 
+@media (max-width: 1199px){
+    .navbar {
+        padding-right: 50px;
+    }
+}
+
+@media screen and (max-height:850px),
+        screen and (max-height:789px){
+
+
+@media (max-width: 1375px){
+
+    .features{
+        padding: 20px 8% 0; 
+    }
+    .feature-box {
+        padding: 0 2% 0;
+    }
+}
+
+@media (max-width: 1225px){
+
+    .welcome-img-box{
+        top: 110px;
+        width: 600px;
+    }
+    .welcome-img1{
+        width: 150px;
+        margin-right: 10px;
+    }
+    .welcome-img2{
+        width: 150px;
+        margin-right: 10px;
+    }
+    .welcome-img3{
+        width: 150px;
+    }
+    .welcome-box {
+        padding-bottom: 10px;
+    }
+    .land-section{
+        padding-left: 6%; 
+    }
+} 
+
+@media (max-width:1150px){
+    .welcome-img-box{
+        display: none;
+    }
+    .land-section{
+        padding: 0 10%; 
+    }
+    .welcome-box {
+        max-width: 100%;
+        text-align: center;
+    }
+}
 @media (max-width:850px) {
     .land-section{
-        padding: 0 9% 0;
+        padding: 0 8% 0;
     }
     .slogan-text{
         font-size: 4rem;
     }
-    .features{
-        padding: 20px 10% 0; 
-    }
-    .logo{
-        position: inherit;
-        display: inline-block;
-        margin-top: 75px;
-    }
 }
+
+
+
 
 @media (max-width:640px){
     .land-section{
@@ -557,16 +493,6 @@
     }
     .welcome-box{
         text-align: center;
-    }
-    .features{
-        padding: 20px 10% 0; 
-    }
-    .products-content {
-        text-align: center;
-        padding: 0 5% 0;
-    }
-    .product-description{
-        margin-left: 0;
     }
 }
 
@@ -590,12 +516,31 @@
     .nav-brand{
         display: inline;
     }
-    .logo{
-        width: 80%;
-        margin: 75px 10% 0;
-    }
 } 
 
+}
 
 
+/* @media screen and (max-height:750px),
+        screen and (max-height:700px){
 
+    
+}
+@media screen and (max-height:700px),
+        screen and (max-height:650px){
+
+   
+
+} */
+
+/* 1000px Width; The same for any Height*/
+
+/* @media (max-width: 1000px){
+  
+} 
+@media (max-width: 720px){
+    
+} 
+@media (max-width: 520px){ 
+   
+}  */
