--- a/css/styles.css
+++ b/css/styles.css
@@ -54,13 +54,13 @@ h1, h2, h3 {
 /* Navigation Bar */
 
 .navbar {
-    padding: 0% 1% 2.5% 6%;
+    padding: 0% 1% 35px 6%;
 }
 .brand-pic{
     width: 300px;
     position: relative;
     top: 35px;
-    /* margin-bottom: 15px; */
+    margin-bottom: 15px;
 }
 .nav-brand{
     margin-top: 30px;
@@ -127,18 +127,18 @@ h1, h2, h3 {
 }
 .land-section{
     vertical-align: top;
-    padding-left: 3%; 
+    padding-left: 8%; 
 }
 .welcome-box {
-    padding-bottom: 6%;
-    max-width: 790px;
+    padding-bottom: 30px;
+    max-width: 550px;
     text-align: left;
     vertical-align: top;
 }
 .slogan-text{
     display: inline-block;
     color: #fff;
-    margin-top: 50px;
+    margin-top: 20px;
     font-size: 4.5rem;
     line-height: 4.5rem;
 }
@@ -158,43 +158,21 @@ h1, h2, h3 {
     position: absolute;
     right: 2.5%; 
     top: 90px;
-    width: 540px;
+    width: 600px;
     text-align: right;
 }
 
-.welcome-img3{
-    /* vertical-align: top;
-    display: inline-block;
-    position: relative;
-    right: 2.5%; 
-    top: 80px; */
+.welcome-img1{
     width: 170px;
-    /* margin: 0; */
+    margin-right: 10px;
 }
 .welcome-img2{
-    /* vertical-align: top;
-    display: inline-block;
-    position: relative;
-    right: 16%; 
-    top: 80px; */
     width: 170px;
-    /* margin: 0; */
     margin-right: 10px;
 }
-
-.welcome-img1{
-    /* vertical-align: top;
-    display: inline-block;
-    position: relative;
-    right: 29%; 
-    top: 80px; */
+.welcome-img3{
     width: 170px;
-    /* margin: 0; */
-    margin-right: 10px;
 }
-
-
-
 
 
 
@@ -222,6 +200,9 @@ h1, h2, h3 {
 .features-icon:hover {
     color: #0e94ab ;
 }
+/* .feature-head{
+    margin-bottom: 10px;
+} */
 
 
 
